# sport-news-service

./: README.md  dependencies.py  main.py  requirements.txt
backend/: pyproject.toml
backend/app/: crud.py  dependencies.py  main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: article_types.py  articles.py  users.py
backend/app/db/: crud.py  db.py  models.py  schemas.py  services.py
backend/app/routers/: article_comments.py  article_types.py  articles.py  pages.py  security.py  sockets.py  users.py
backend/app/static/js/: loadNews.js
backend/app/static/styles/: styles.css
backend/app/templates/: article_detail.html  base.html  footer.html  navigation.html
backend/app/tests/: conftest.py
backend/app/tests/utils/: item.py
db/: crud.py  db.py  models.py  schemas.py  services.py
routers/: article_comments.py  article_types.py  articles.py  pages.py  security.py  sockets.py  users.py
templates/: create_article.html  header.html  index.html  navigation.html  user_page.html
