[project]
name = "sport-news-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.3.2",
    "fastapi[standard]>=0.115.6",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.36",
]
